    * Let class I be able to detect CannotDownloadError.
    * Remove InstallRemovePane.app_objs. Use AppObjs.appobjs directly.
    * Rewrite InstallRemovePane.show_error. Do not treat CannotDownloadError as bug.
    * Do not treat CannotDownloadError as bug in APT.install().
    * Do not use xterm. Detect return value of run_as_root_in_terminal().
    * Completely remove app_obj.sane attribute.

2010-07-19 Homer Xing <homer.xing@gmail.com>

    * Also install qcad-data when install qcad.
    * Update url of sweethome
    * User can disable confirm dialog which appears before installing
    * Re-write the introduction of texlive
    * Can refresh installing state of software items
    * Config.get_login_window_background() return None rather than raise exception
    * Ignore FetchFailedException in apt_update()
    * Download icon pack using proxy server
    * Prompt syntax error in source configuration

2010-07-10 CHEN Yangyang <skabyy@gmail.com>

    * Finish a simple version of AilurusServer and upload it to google appengine.
    * Add support/clientlib.py to communicate with AilurusServer.
    * Add interfaces to upload skills and suggestions.
    * Delay sending message if the server can not be connected

2010-07-10 Homer Xing <homer.xing@gmail.com>

    * Install repository signing key from local directory.
      Therefore we can enable repository even if the key server is offline.
    * Make the install_software_pane more pretty, by splitting middle toolbar 
      into pane1 and pane2.
    * Display total number of available software items at the bottom of 
      install_software_pane.
    * Stat source code loading time. Display stat data by "others->stat data".
      Therefore developers can do more optimization.

2010-07-9 Homer Xing <homer.xing@gmail.com>

    * Remove excessive icons.
    * Delete unused variables in "with" statements.
    * List excessive icons in ``appicons'' directory.
      Print the software items which require an icon.